--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,7 +1,7 @@
-@include font ('Gilroy', 'Gilroy-Regular', "400", "normal");
-@include font ('Gilroy', 'Gilroy-Bold', "700", "normal");
-@include font ('Gilroy', 'Gilroy-Medium', "500", "normal");
-@include font ('Gilroy', 'Gilroy-SemiBold', "600", "normal");
-@include font ('Oranienbaum', 'Oranienbaum-Regular', "400", "normal");
-@include font ('Prata', 'Prata-Regular', "400", "normal");
-@include font ('Roboto', 'Roboto-Regular', "400", "normal");
+@include font ('Museo Sans Cyrl', 'Museo_Sans_Cyrl_300', "300", "normal");
+@include font ('Museo Sans Cyrl', 'Museo_Sans_Cyrl_500', "500", "normal");
+@include font ('Museo Sans Cyrl', 'Museo_Sans_Cyrl_700', "700", "normal");
+@include font ('Open Sans', 'OpenSans-Regular', "400", "normal");
+@include font ('Open Sans', 'OpenSans-Bold', "700", "normal");
+@include font ('Roboto Condensed', 'RobotoCondensed-Regular', "400", "normal");
+@include font ('Tenor Sans', 'TenorSans-Regular', "400", "normal");
