--- a/src/scss/other.scss
+++ b/src/scss/other.scss
@@ -1,113 +1,131 @@
 .address {
-    display: flex;
-    align-items: center;
-    svg {
-        width: 12px;
-        height: 15px;
-        flex-shrink: 0;
-    }
+  display: flex;
+  align-items: center;
+  svg {
+    width: 12px;
+    height: 15px;
+    flex-shrink: 0;
+    fill: $red;
+  }
 }
 
 .phone {
-    display: flex;
-    align-items: center;
-    svg {
-        width: 15px;
-        height: 15px;
-        flex-shrink: 0;
-    }
+  display: flex;
+  align-items: center;
+  svg {
+    width: 15px;
+    height: 15px;
+    flex-shrink: 0;
+  }
 
-    &:hover {
-        color: $red;
-    }
+  &:hover {
+    color: $red;
+  }
 }
 
 .search {
-    &__btn {
-        width: 22px;
-        height: 22px;
-        fill: $red;
-        &_outForm {
-            fill: white;
-            margin-right: 22px;
-        }
+  &__btn {
+    width: 22px;
+    height: 22px;
+    fill: $red;
+    &_outForm {
+      fill: white;
+      margin-right: 22px;
+      flex-shrink: 0;
     }
+  }
 
-    .form__row {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 14px 16px;
-    }
+  .form__row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 14px 16px;
+  }
 
-    &__btn,
-    &__close {
-        &:hover {
-            cursor: pointer;
-        }
+  &__btn,
+  &__close {
+    &:hover {
+      cursor: pointer;
     }
+  }
 
-    &__close {
-        display: none;
+  &__close {
+    width: 18px;
+    height: 18px;
+    margin-left: 7px;
+    span {
+      width: 18px;
+      height: 2px;
+      background-color: #bfbfbf;
+      display: block;
+      &:first-child {
+        transform: rotate(45deg);
+        margin-top: 7px;
+      }
+
+      &:last-child {
+        transform: rotate(-45deg);
+        margin-top: -2px;
+      }
     }
+  }
 }
 
 .btn {
-    background: #e02f2f;
-    border-radius: 6px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 16px;
-    color: #fff;
+  background: #e02f2f;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 16px;
+  color: #fff;
+  &:hover {
+    background: #bc1616;
+  }
+
+  &_catalog {
+    background: #ffaf35;
+    justify-content: flex-start;
+
+    svg {
+      width: 22px;
+      height: 20px;
+      margin-right: 7px;
+    }
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 20px;
+
     &:hover {
-        background: #bc1616;
+      background: #ff9f0d;
+
+      &::after {
+        transform: rotate(45deg);
+      }
+
+      &::before {
+        transform: rotate(-45deg);
+      }
     }
 
-    &_catalog {
-        background: #ffaf35;
-        justify-content: flex-start;
-        
-        svg {
-            width: 22px;
-            height: 20px;
-            margin-right: 7px;
-        }
-        font-weight: 600;
-        font-size: 17px;
-        line-height: 20px;
-
-        &:hover {
-            background: #ff9f0d;
-
-            &::after {
-                transform: rotate(45deg);
-            }
-
-            &::before {
-                transform: rotate(-45deg);
-            }
-            
-        }
-
-        &::after,
-        &::before {
-            position: absolute;
-            top: 24px;
-            content: "";
-            width: 7px;
-            height: 2px;
-            background-color: white;
-            transition: transform 0.25s ease-in-out;
-        }
-        &::after {
-            right: 14px;
-            transform: rotate(-45deg);
-        }
-
-        &::before {
-            right: 19px;
-            transform: rotate(45deg);
-        }
+    &::after,
+    &::before {
+      position: absolute;
+      top: 24px;
+      content: "";
+      width: 7px;
+      height: 2px;
+      background-color: white;
+      transition: transform 0.25s ease-in-out;
     }
+    &::after {
+      right: 14px;
+      transform: rotate(-45deg);
+    }
+
+    &::before {
+      right: 19px;
+      transform: rotate(45deg);
+    }
+  }
 }
