--- a/src/scss/forms.scss
+++ b/src/scss/forms.scss
@@ -4,7 +4,7 @@
         padding: 20px 23px;
         border: 1px solid rgba(51, 51, 51, 0.3);
         border-radius: 6px;
-        &:hover {
+        &:hover, &:focus, &:active {
             border: 1px solid #FFAF35;
         }
 
