--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -117,7 +117,7 @@
     width: 100%;
   }
   @media (max-width: 1100px) {
-    padding: 10px 0 25px;
+    padding: 10px 0 0;
     &__container {
       display: block;
     }
