--- a/src/scss/other.scss
+++ b/src/scss/other.scss
@@ -83,6 +83,20 @@
     background: #bc1616;
   }
 
+  &_all {
+    display: inline-block;
+    border: 1px solid #e02f2f;
+    border-radius: 50px;
+    margin: 35px auto 0;
+    padding: 23px 35px;
+    color: $red;
+    text-align: center;
+    background-color: transparent;
+    &:hover {
+      color: white;
+    }
+  }
+
   &_catalog {
     background: #ffaf35;
     justify-content: flex-start;
@@ -149,13 +163,132 @@
 }
 
 .section {
-  padding: 120px 80px;
+  padding: 120px 0 80px;
   &__title {
-    font-family: 'Tenor Sans';
+    font-family: "Tenor Sans";
     font-weight: 400;
     font-size: 60px;
     line-height: 34px;
     margin-bottom: 56px;
     text-align: center;
+    @media (max-width: 1024px) {
+      font-size: 48px;
+      line-height: 53px;
+    }
   }
+}
+
+.labels {
+  position: absolute;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(60px, max-content));
+  gap: 6px 10px;
+  width: 100%;
+  z-index: 100;
+  margin: 10px 0 0 10px;
+
+  li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 7px;
+    border-radius: 3px;
+    opacity: 0.9;
+  }
+
+  img {
+    margin-right: 6px;
+    width: 14px;
+    height: 14px;
+    object-fit: contain;
+  }
+
+  span {
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 12px;
+    text-transform: uppercase;
+    color: white;
+  }
+
+  @media (max-width: 660px) {
+    grid-template-columns: repeat(auto-fit, minmax(34px, max-content));
+    li {
+      padding: 4px;
+    }
+
+    span {
+      font-size: 7px;
+      line-height: 8px;
+    }
+
+    img {
+      width: 10px;
+      height: 10px;
+      margin-right: 3px;
+    }
+  }
+}
+
+.weight {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(60px, max-content));
+  gap: 6px 10px;
+  li {
+    a {
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 13px;
+      background-color: white;
+      border: 1px solid #ffaf35;
+      border-radius: 50px;
+      color: #ffaf35;
+      padding: 7px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      &.active {
+        background-color: #ffaf35;
+        color: white;
+      }
+    }
+  }
+}
+
+.counter {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  border: 1px solid rgb(51, 51, 51, 0.15);
+  border-radius: 6px;
+  padding: 0 3px;
+  &__symbol {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    font-size: 15px;
+    font-weight: 400;
+    background: rgb(51, 51, 51, 0.07);
+  }
+
+  input {
+    margin: 0 15px;
+    width: 10px;
+    text-align: center;
+    font-size: 15px;
+    @media(max-width: 660px) {
+      font-size: 10px;
+    }
+  }
+}
+
+.block__all {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
