--- a/src/scss/other.scss
+++ b/src/scss/other.scss
@@ -261,6 +261,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   border: 1px solid rgb(51, 51, 51, 0.15);
   border-radius: 6px;
   padding: 0 3px;
@@ -274,15 +275,20 @@
     font-size: 15px;
     font-weight: 400;
     background: rgb(51, 51, 51, 0.07);
+    @media (max-width: 660px) {
+      width: 14px;
+      height: 14px;
+    }
   }
 
   input {
-    margin: 0 15px;
+    /* margin: 0 15px; */
     width: 10px;
     text-align: center;
     font-size: 15px;
-    @media(max-width: 660px) {
+    @media (max-width: 660px) {
       font-size: 10px;
+      /* margin: 0 4px; */
     }
   }
 }
