--- a/src/scss/other.scss
+++ b/src/scss/other.scss
@@ -164,6 +164,10 @@
 
 .section {
   padding: 120px 0 80px;
+
+  @media (max-width: 1024px) {
+    padding: 58px 0;
+  }
   &__title {
     font-family: "Tenor Sans";
     font-weight: 400;
@@ -174,6 +178,50 @@
     @media (max-width: 1024px) {
       font-size: 48px;
       line-height: 53px;
+      max-width: 80%;
+      margin: 0 auto 25px;
+    }
+
+    &.section__title_left {
+      font-size: 48px;
+      line-height: 34px;
+      text-align: left;
+      margin: 0 0 41px;
+
+      @media (max-width: 1024px) {
+        max-width: 100%;
+        font-size: 36px;
+        line-height: 43px;
+        margin: 0 0 30px;
+      }
+    }
+  }
+
+  &__with-arrows {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0 0 41px;
+    .section__title_left {
+      margin-bottom: 0;
+    }
+    @media (max-width: 1024px) {
+      margin: 0 0 30px;
+    }
+  }
+
+  &__arrows {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    @media(max-width: 767px) {
+      display: none;
+    }
+
+    > * {
+      &:first-child {
+        margin-right: 30px;
+      }
     }
   }
 }
@@ -252,6 +300,13 @@
         background-color: #ffaf35;
         color: white;
       }
+
+      &:not(.weight li a.active) {
+        &:hover {
+          background-color: $red;
+          color: white;
+        }
+      }
     }
   }
 }
@@ -297,4 +352,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.arrow {
+  background-image: url(../img/arrow.svg);
+  width: 26px;
+  height: 15px;
+  background-size: 26px 15px;
+  background-repeat: no-repeat;
+  &_left {
+    transform: rotate(180deg);
+  }
+
+  &.swiper-button-disabled {
+    opacity: 0.4;
+  }
 }
