--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -22,6 +22,9 @@
       width: 100%;
       height: 230px;
       border-radius: 0;
+      @media(max-width: 1100px) {
+        height: 3px;
+      }
 
       &::after {
         position: absolute;
@@ -62,7 +65,7 @@
   }
 
   &__item-bottom {
-    margin-left: 4px;
+    /* margin-left: 4px; */
   }
 
   &__name {
@@ -70,7 +73,7 @@
     font-weight: 600;
     font-size: 17px;
     line-height: 20px;
-    margin-left: 4px;
+    /* margin-left: 4px; */
     display: block;
     margin-bottom: 10px;
     @media (max-width: 660px) {
@@ -100,6 +103,7 @@
     @media (max-width: 660px) {
       font-size: 13px;
       line-height: 16px;
+      margin: 18px 0 6px;
     }
   }
 
