--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -227,4 +227,10 @@
             }
         }
     }
+
+    @media(max-width: 320px) {
+        &__politics {
+            font-size: 13px;
+        }
+    }
 }
