--- a/src/scss/popups.scss
+++ b/src/scss/popups.scss
@@ -26,21 +26,13 @@
 
   &__close {
     position: absolute;
-    top: 25px;
-    right: 20px;
+    top: -25px;
+    right: -20px;
     font-size: 25px;
     font-weight: 300;
-    span {
-      color: white;
-      text-align: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+    color: $red;
     &:hover {
-      span {
-        /* color: $orange; */
-      }
+      color: #ffaf35;
     }
   }
 
@@ -56,25 +48,6 @@
 
     @media (max-width: 768px) {
       max-width: 85vw;
-    }
-  }
-}
-
-#stories.popup {
-  .popup__close {
-    top: -25px;
-    right: -20px;
-    font-size: 15px;
-    font-weight: 300;
-    background: #0d0e0e;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    @media (max-width: 580px) {
-      width: 25px;
-      height: 25px;
-      top: -20px;
-      right: -15px;
     }
   }
 }
