--- a/src/scss/other.scss
+++ b/src/scss/other.scss
@@ -95,6 +95,13 @@
     &:hover {
       color: white;
     }
+
+    @media (max-width: 1024px) {
+      margin: 30px auto 0;
+      padding: 18px 25px;
+      font-size: 15px;
+      line-height: 18px;
+    }
   }
 
   &_catalog {
@@ -214,7 +221,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    @media(max-width: 767px) {
+    @media (max-width: 767px) {
       display: none;
     }
 
