--- a/src/scss/reviews.scss
+++ b/src/scss/reviews.scss
@@ -1,11 +1,13 @@
 .reviews {
     max-width: 1250px;
+    margin: 0;
     @media(max-width: 479px) {
         width: 100vw;
     }
     @media (max-width: 480px) {
         .swiper-wrapper {
             max-width: 80%;
+            
         }
     }
 
