--- a/src/scss/forms.scss
+++ b/src/scss/forms.scss
@@ -1,15 +1,114 @@
 .form {
+    &__title {
+        font-weight: 400;
+        font-size: 48px;
+        margin-bottom: 37px;
+    }
+    &.form_faq {
+        background-color: white;
+        padding: 63px 80px 53px;
+        border-radius: 20px;
+        display: grid;
+        grid-template-columns: 1fr 250px;
+        gap: 0 110px;
+        .form__rows {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 30px 33px;
+            margin-bottom: 30px;
+            grid-column: 1/2;
+            grid-row: 2/3;
+        }
+
+        .form__row {
+            &:nth-child(4) {
+                grid-column: 1/4;
+            }
+        }
+
+        .btn {
+            width: 200px;
+            height: 60px;
+            font-size: 21px;
+            line-height: 25px;
+            grid-column: 1/2;
+            grid-row: 3/4;
+        }
+
+        .messengers {
+            grid-column: 2/3;
+        }
+
+        .form__title {
+            grid-column: 1/3;
+        }
+    }
+
     &__row {
         width: 100%;
-        padding: 20px 23px;
         border: 1px solid rgba(51, 51, 51, 0.3);
         border-radius: 6px;
-        &:hover, &:focus, &:active {
-            border: 1px solid #FFAF35;
+        &:hover,
+        &:focus,
+        &:active {
+            border: 1px solid #ffaf35;
         }
 
         input {
-            width: 85%;
+            width: 95%;
+            padding: 20px 23px;
+        }
+
+        textarea {
+            border: 0;
+            outline: 0;
+            padding: 20px 23px;
+            width: 100%;
+            resize: none;
+        }
+    }
+
+    @media (max-width: 1290px) {
+        &.form_faq {
+            padding: 63px calc(15px + (65 + 65 * 0.7) * ((100vw - 375px) / 1290));
+            grid-template-columns: 1fr;
+            gap: 30px;
+
+            > * {
+                grid-column: initial !important;
+                grid-row: initial !important;
+            }
+
+            .form__rows {
+                margin-bottom: 0 ;
+            }
+
+            .form__title {
+                margin-bottom: 0 ;
+            }
+        }
+    }
+
+    @media (max-width: 1024px) {
+        &.form_faq {
+            .form__title {
+                font-size: 36px;
+                line-height: 43px;
+            }
+        }
+    }
+
+    @media (max-width: 820px) {
+        &.form_faq {
+            .form__rows {
+                grid-template-columns: 1fr;
+            }
+
+            .form__row {
+                &:nth-child(4) {
+                    grid-column: initial;
+                }
+            }
         }
     }
 }
