--- a/src/scss/other.scss
+++ b/src/scss/other.scss
@@ -39,7 +39,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 14px 16px;
+    padding-right: 16px;
+
+    input {
+      padding: 14px 16px;
+    }
   }
 
   &__btn,
@@ -171,6 +175,11 @@
 
 .section {
   padding: 120px 0 80px;
+  &.section_faq {
+    background-image: url(../img/form_faq.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 
   @media (max-width: 1024px) {
     padding: 58px 0;
@@ -373,5 +382,88 @@
 
   &.swiper-button-disabled {
     opacity: 0.4;
+  }
+}
+
+.messengers {
+  max-width: 250px;
+
+  @media (max-width: 1290px) {
+    max-width: 525px;
+  }
+  @media(max-width: 820px) {
+    margin-top: 20px;
+  }
+  &__title {
+    font-weight: 600;
+    font-size: 21px;
+    line-height: 29px;
+    margin-bottom: 35px;
+    @media (max-width: 1290px) {
+      margin-bottom: 25px;
+    }
+  }
+
+  &__list {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 13px;
+    @media (max-width: 1290px) {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, 250px);
+      gap: 15px;
+    }
+  }
+
+  &__item {
+  }
+
+  &__link {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 600;
+    font-size: 17px;
+    line-height: 34px;
+    border-radius: 9px;
+    padding: 12px;
+    color: white;
+
+    svg {
+      width: 38px;
+      height: 38px;
+    }
+
+    &.wa {
+      background: #29a71a;
+    }
+
+    &.viber {
+      background: #6f3faa;
+      span {
+        padding-right: 20px;
+      }
+    }
+
+    &:hover {
+      background: $red;
+    }
+  }
+}
+
+.thanks {
+  padding: 70px;
+  background: white;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 8px;
+  font-size: 30px;
+  line-height: 37px;
+  max-width: 80vw;
+  text-align: center;
+
+  @media (max-width: 1100px) {
+    padding: calc(30px + (40 + 40 * 0.7) * ((100vw - 375px) / 1100));
+    font-size: calc(20px + (10 + 10 * 0.7) * ((100vw - 375px) / 1100));
+    line-height: calc(25px + (12 + 12 * 0.7) * ((100vw - 375px) / 1100)) 25px;
   }
 }
