--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -77,6 +77,9 @@ body {
 /* Мы фабрика подарков */
 @import "we";
 
+/* Поставщики */
+@import 'suppliers';
+
 /* Отзывы и благодарности */
 @import 'reviews';
 
