--- a/src/scss/other.scss
+++ b/src/scss/other.scss
@@ -173,6 +173,10 @@
   background-color: #fff6f6;
 }
 
+.background-white {
+  background-color: white;
+}
+
 .section {
   padding: 120px 0 80px;
   &.section_faq {
