--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,8 @@
   @font-face {
     font-family: $font_name;
     font-display: swap;
-    src: url(../fonts/#{$file_name}.woff2) format("woff2"), url(../fonts/#{$file_name}.woff) format("woff");
+    src: url(../fonts/#{$file_name}.woff2) format("woff2"),
+      url(../fonts/#{$file_name}.woff) format("woff");
     font-weight: #{$weight};
     font-style: #{$style};
   }
@@ -36,23 +37,24 @@ body {
   }
 
   &__title {
-    font-size: 54px;
-    line-height: 88px;
-    text-align: center;
-    text-transform: uppercase;
-    font-family: "Prata";
     font-weight: 400;
-    margin: 0 auto 25px;
+    font-size: 60px;
+    line-height: 64px;
+    font-family: "Tenor Sans";
     word-wrap: break-word;
 
-    @media (max-width: 1220px) {
-      font-size: calc(48px + (6 + 6 * 0.7) * ((100vw - 375px) / 1220));
-      line-height: calc(60px + (18 + 18 * 0.7) * ((100vw - 375px) / 1220));
+    @media (max-width: 1290px) {
+      font-size: calc(48px + (12 + 12 * 0.7) * ((100vw - 375px) / 1290));
+      line-height: calc(53px + (11 + 11 * 0.7) * ((100vw - 375px) / 1290));
     }
 
     /* @media (max-width: 580px) {
       text-align: left;
     } */
+  }
+
+  &__top {
+    padding: 38px 0 20px;
   }
 }
 
@@ -62,8 +64,20 @@ body {
 /* Прочее */
 @import "other";
 
-/* Меню */
+/* Хлебные крошки */
+@import "breadcrumbs";
+
+/* Меню (топ, низ) */
 @import "menu";
+
+/* Меню (левое) */
+@import 'left-menu';
+
+/* Фильтр */
+@import 'filter';
+
+/* Контейнер каталога */
+@import 'container-catalog';
 
 /* Соц сети */
 @import "social";
@@ -78,10 +92,10 @@ body {
 @import "we";
 
 /* Поставщики */
-@import 'suppliers';
+@import "suppliers";
 
 /* Отзывы и благодарности */
-@import 'reviews';
+@import "reviews";
 
 /* Шапка */
 @import "header";
