--- a/src/scss/container-catalog.scss
+++ b/src/scss/container-catalog.scss
@@ -1,11 +1,52 @@
-.container-catalog {
-    display: grid;
-    grid-template-columns: 260px 1fr;
-    gap: 70px;
+.container-grid {
+  display: grid;
+  grid-template-columns: 260px 1fr;
+  align-items: baseline;
+  gap: 0 60px;
+  padding-bottom: 60px;
+
+  @media(max-width: 1000px) {
+    grid-template-columns: 1fr;
+  }
+
+  &.container-grid_catalog {
+    .right-block {
+      grid-template-columns: max-content max-content;
+      justify-content: space-between;
+      display: grid;
+      align-content: baseline;
+      @media(max-width: 1000px) {
+        grid-template-columns: 1fr;
+      }
+
+      .catalog {
+        grid-column: 1/3;
+        grid-row: 2/3;
+        justify-content: initial;
+        @media(max-width: 1000px) {
+          justify-content: center;
+        }
+      }
+
+      .pagination {
+        grid-column: 1/3;
+        grid-row: 3/4;
+      }
+    }
+  }
 }
 
 .left-block {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+}
+
+.right-block {
+  gap: 20px;
+  padding-top: 30px;
+}
+
+.select_empty {
+  display: none;
 }
