--- a/src/scss/left-menu.scss
+++ b/src/scss/left-menu.scss
@@ -2,4 +2,108 @@
   background-color: white;
   padding: 30px;
   border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  a {
+    font-size: 15px;
+    line-height: 19px;
+    &:hover {
+      color: $red;
+    }
+  }
+  > li {
+    margin-bottom: 24px;
+    z-index: 2;
+    position: relative;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+    &.left-menu__dropdown {
+      &.open {
+        > ul {
+          overflow: initial;
+          max-height: 1000px;
+          visibility: visible;
+          transition: max-height 0.3s ease-in-out, visibility 0.1s linear 0.1s;
+          > li {
+            display: block;
+          }
+        }
+        span {
+          &::after {
+            position: absolute;
+            content: "";
+            left: -10px;
+            right: -10px;
+            top: -10px;
+            bottom: -10px;
+            background: #f1f1f1;
+            border-radius: 9px;
+            z-index: -1;
+          }
+        }
+        > a {
+          margin-bottom: 20px;
+          font-weight: 600;
+          &::before {
+            transform: rotate(-45deg);
+          }
+
+          &::after {
+            transform: rotate(45deg);
+          }
+        }
+      }
+      > a {
+        position: relative;
+        display: block;
+        &:hover {
+          &::after,
+          &::before {
+            background-color: $red;
+          }
+        }
+
+        &::after,
+        &::before {
+          position: absolute;
+          content: "";
+          width: 8px;
+          height: 1.5px;
+          background-color: rgba(51, 51, 51, 0.5);
+          top: 8px;
+
+          transition: transform 0.25s ease-in-out;
+        }
+
+        &::before {
+          right: 5px;
+          transform: rotate(45deg);
+          z-index: 1;
+        }
+
+        &::after {
+          right: 0;
+          z-index: 2;
+          transform: rotate(-45deg);
+        }
+      }
+    }
+
+    > ul {
+      max-height: 0;
+      overflow: hidden;
+      visibility: hidden;
+      transition: max-height 0.3s linear;
+      margin-left: 30px;
+      > li {
+        display: none;
+        margin-bottom: 8px;
+        &:last-child {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
 }
