--- a/src/scss/pagination.scss
+++ b/src/scss/pagination.scss
@@ -2,7 +2,11 @@
   margin-top: 30px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  overflow: auto;
+  padding-bottom: 10px;
+  > * {
+    flex-shrink: 0;
+  }
 
   &__prev,
   &__next {
