--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -65,7 +65,6 @@
   }
 
   &__item-bottom {
-    /* margin-left: 4px; */
   }
 
   &__name {
@@ -73,7 +72,7 @@
     font-weight: 600;
     font-size: 17px;
     line-height: 20px;
-    /* margin-left: 4px; */
+
     display: block;
     margin-bottom: 10px;
     @media (max-width: 660px) {
@@ -171,5 +170,50 @@
     line-height: 18px;
     display: flex;
     align-items: center;
+    @media (max-width: 1000px) {
+      display: none;
+    }
   }
+}
+
+.swiper.popular {
+  @media(max-width: 1290px) {
+    width: 100vw;
+  }
+  > .swiper-wrapper {
+    align-items: stretch;
+    @media(max-width: 480px) {
+      max-width: 75%;
+    }
+    > .swiper-slide {
+      height: auto;
+    }
+  }
+
+  
+  .catalog__item {
+    border: 1px solid rgba(51, 51, 51, 0.2);
+    height: 100%;
+  }
+  .swiper-scrollbar {
+    position: static;
+    margin-top: 22px;
+    background: white;
+    height: 10px;
+
+    @media (min-width: 768px) {
+      display: none;
+    }
+
+    @media(max-width: 768px) {
+      width: calc(100vw - 30px);
+    }
+  }
+
+  .swiper-scrollbar-drag {
+    background: #dbe6f4;
+    border-radius: 50px;
+  }
+
+  
 }
