--- a/src/scss/container-catalog.scss
+++ b/src/scss/container-catalog.scss
@@ -5,7 +5,7 @@
   gap: 0 60px;
   padding-bottom: 60px;
 
-  @media(max-width: 1000px) {
+  @media (max-width: 1000px) {
     grid-template-columns: 1fr;
   }
 
@@ -15,22 +15,53 @@
       justify-content: space-between;
       display: grid;
       align-content: baseline;
-      @media(max-width: 1000px) {
+      @media (max-width: 1000px) {
         grid-template-columns: 1fr;
+        > * {
+          grid-column: initial !important;
+          grid-row: initial !important;
+        }
       }
 
       .catalog {
         grid-column: 1/3;
         grid-row: 2/3;
-        justify-content: initial;
-        @media(max-width: 1000px) {
-          justify-content: center;
-        }
       }
 
       .pagination {
         grid-column: 1/3;
         grid-row: 3/4;
+        @media(min-width: 561px) {
+          justify-content: center;
+        }
+      }
+    }
+
+    .selects {
+      display: flex;
+      align-items: center;
+      @media (max-width: 1000px) {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 15px;
+        align-items: stretch;
+      }
+      @media(max-width: 374px) {
+        grid-template-columns: 1fr;
+        gap: 12px;
+      }
+    }
+
+    .select {
+      margin-right: 20px;
+      &:last-child {
+        margin-right: 0;
+      }
+
+      @media(max-width: 1000px) {
+        margin-right: 0;
+        display: flex;
+        justify-content: center;
       }
     }
   }
@@ -45,8 +76,14 @@
 .right-block {
   gap: 20px;
   padding-top: 30px;
+  @media(max-width: 1000px) {
+    padding-top: 0;
+  }
 }
 
 .select_empty {
   display: none;
+  @media (max-width: 1000px) {
+    display: inline-block;
+  }
 }
