--- a/src/scss/other.scss
+++ b/src/scss/other.scss
@@ -248,9 +248,9 @@
 
 .labels {
   position: absolute;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(60px, max-content));
-  gap: 6px 10px;
+  display: flex;
+  align-items: stretch;
+  flex-wrap: wrap;
   width: 100%;
   z-index: 100;
   margin: 10px 0 0 10px;
@@ -262,6 +262,11 @@
     padding: 7px;
     border-radius: 3px;
     opacity: 0.9;
+    margin-right: 10px;
+    margin-bottom: 6px;
+    &:last-child {
+      margin-right: 0;
+    }
   }
 
   img {
@@ -280,7 +285,6 @@
   }
 
   @media (max-width: 660px) {
-    grid-template-columns: repeat(auto-fit, minmax(34px, max-content));
     li {
       padding: 4px;
     }
@@ -395,7 +399,7 @@
   @media (max-width: 1290px) {
     max-width: 525px;
   }
-  @media(max-width: 820px) {
+  @media (max-width: 820px) {
     margin-top: 20px;
   }
   &__title {
