--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,8 +2,7 @@
   @font-face {
     font-family: $font_name;
     font-display: swap;
-    src: url(../fonts/#{$file_name}.woff2) format("woff2"),
-      url(../fonts/#{$file_name}.woff) format("woff");
+    src: url(../fonts/#{$file_name}.woff2) format("woff2"), url(../fonts/#{$file_name}.woff) format("woff");
     font-weight: #{$weight};
     font-style: #{$style};
   }
@@ -48,13 +47,35 @@ body {
       line-height: calc(53px + (11 + 11 * 0.7) * ((100vw - 375px) / 1290));
     }
 
-    /* @media (max-width: 580px) {
-      text-align: left;
-    } */
+    @media (max-width: 480px) {
+      max-width: 90%;
+    }
   }
 
   &__top {
     padding: 38px 0 20px;
+  }
+
+  &__top_new-year {
+    position: relative;
+
+    background-image: url(../img/new-year.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    z-index: 2;
+    &::after {
+      z-index: -1;
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(180deg, rgba(239, 246, 255, 0) 0%, #eff6ff 100%);
+    }
   }
 }
 
