--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -1,9 +1,22 @@
 .menu {
-  display: grid;
-  grid-template-columns: repeat(5, max-content);
-  gap: 10px 30px;
+  display: flex;
+  flex-wrap: wrap;
+  @media(max-width: 1100px) {
+
+  }
 
   &__item {
+    margin-right: 30px;
+    @media(max-width: 1100px) {
+      margin-right: 0;
+      margin-bottom: 10px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+    &:last-child {
+      margin-right: 0;
+    }
     display: inline-block;
     a {
       &:hover {
@@ -68,7 +81,7 @@
   @media (min-width: 1101px) {
     &__expand {
       padding-top: 10px;
-      z-index: 1;
+      z-index: 9;
       position: absolute;
       width: 100%;
       opacity: 0;
