--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -115,6 +115,9 @@ body {
 /* Каталог */
 @import "catalog";
 
+/* Детальная страница */
+@import 'detail';
+
 /* Мы фабрика подарков */
 @import "we";
 
