--- a/src/scss/detail.scss
+++ b/src/scss/detail.scss
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
+    margin: 18px 0 80px;
 
     &__section {
         min-width: 0;
@@ -59,8 +60,8 @@
             img {
                 width: 100%;
                 height: 365px;
-                object-fit: cover;
-                object-position: center;
+                object-fit: contain;
+                /* object-position: center; */
                 border-radius: 7px;
             }
             .swiper-slide {
@@ -211,11 +212,260 @@
         display: grid;
         grid-template-columns: repeat(3, max-content);
         gap: 20px;
+        grid-template-rows: max-content;
+        align-content: baseline;
     }
 
     &__length,
     &__width-height {
         background: rgb(255, 175, 53, 0.2);
         border-radius: 15px;
+        height: 170px;
+    }
+
+    &__length {
+        width: 247px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__width-height {
+        width: 98px;
+    }
+
+    &__weight {
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 36px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+
+        &::before {
+            content: "";
+            background-image: url(../img/weight.svg);
+            background-size: 40px 40px;
+            background-repeat: no-repeat;
+            width: 40px;
+            height: 40px;
+            margin-bottom: 6px;
+            display: block;
+        }
+    }
+
+    &__size {
+        font-size: 21px;
+        line-height: 25px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    &__structure {
+        margin: 60px 0 58px;
+
+        .detail__title {
+            text-align: center;
+        }
+        ul {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, 240px);
+            gap: 20px 30px;
+            justify-content: center;
+
+            li {
+                background: #ffffff;
+                border: 1px solid rgba(51, 51, 51, 0.2);
+                border-radius: 15px;
+                padding: 10px 10px 20px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                > p {
+                    font-weight: 600;
+                    font-size: 21px;
+                    line-height: 25px;
+                    margin-top: 12px;
+                }
+            }
+
+            img {
+                width: 100%;
+                object-fit: contain;
+                height: 200px;
+            }
+
+            div p {
+                font-size: 15px;
+                line-height: 18px;
+                color: rgba(51, 51, 51, 0.5);
+                margin-top: 5px;
+            }
+
+            h3 {
+                font-weight: 600;
+                font-size: 17px;
+                line-height: 20px;
+                margin-top: 13px;
+            }
+
+            li > p,
+            li > div > p,
+            li h3 {
+                margin-left: 10px;
+                margin-right: 4px;
+            }
+        }
+    }
+
+    .content {
+        font-size: 17px;
+        line-height: 27px;
+    }
+
+    @media (max-width: 1100px) {
+        &__product,
+        &__parameters {
+            grid-template-columns: 1fr;
+            gap: 35px;
+        }
+
+        &__specifications {
+            max-width: initial;
+        }
+    }
+
+    @media (max-width: 767px) {
+        &__product {
+            margin-top: 22px;
+        }
+
+        &__parameters {
+            margin-top: 45px; 
+        }
+        .content {
+            font-size: 15px;
+            line-height: 24px;
+        }
+        &__section {
+            padding: 0 15px;
+        }
+
+        &__parameters-left {
+            gap: 10px;
+            .detail__title {
+                margin-bottom: 15px;
+            }
+        }
+
+        &__length,
+        &__width-height {
+            height: 118px;
+        }
+
+        &__length {
+            width: 172px;
+        }
+
+        &__width-height {
+            width: 68px;
+        }
+
+        &__weight {
+            font-size: 24px;
+            line-height: 29px;
+
+            &::before {
+                width: 30px;
+                height: 30px;
+                background-size: 30px 30px;
+            }
+        }
+
+        &__size {
+            font-size: 18px;
+            line-height: 22px;
+        }
+
+        &__title {
+            font-size: 24px;
+            line-height: 29px;
+        }
+    }
+
+    @media (max-width: 479px) {
+        &__product {
+            .labels {
+                grid-column: initial;
+            }
+
+            .detail-swiper-thumbs {
+                grid-row: 3/4;
+
+                .swiper-slide {
+                    max-height: initial;
+                }
+            }
+
+            .detail-swiper {
+                img {
+                    height: calc(236px + (129 + 129 * 0.7) * ((100vw - 375px) / 479));
+                }
+            }
+        }
+
+        &__product &__product-left {
+            grid-template-columns: 1fr;
+            gap: 20px;
+        }
+
+        .labels {
+            li {
+                padding: 7px;
+            }
+
+            img {
+                width: 14px;
+                height: 14px;
+            }
+
+            span {
+                font-size: 10px;
+                line-height: 12px;
+            }
+        }
+    }
+
+    @media (max-width: 374px) {
+        .catalog__to-cart .btn {
+            width: 150px;
+        }
+
+        &__specifications td {
+            font-size: 16px;
+            line-height: 20px;
+        }
+
+        &__product {
+            .weight li a {
+                font-size: 16px;
+                line-height: 20px;
+            }
+        }
+
+        &__length {
+            width: 147px;
+        }
+
+        &__width-height {
+            width: 60px;
+        }
+
+        &__size {
+            font-size: 12px;
+            line-height: 16px;
+        }
     }
 }
