--- a/src/scss/forms.scss
+++ b/src/scss/forms.scss
@@ -115,5 +115,9 @@
     button:disabled {
         cursor: not-allowed;
         opacity: 0.7;
+
+        &:hover {
+            background-color: $red;
+        }
     }
 }
