--- a/src/scss/detail.scss
+++ b/src/scss/detail.scss
@@ -27,6 +27,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 110px;
+        align-items: baseline;
 
         .detail-swiper-thumbs {
             width: 100%;
@@ -269,54 +270,55 @@
         .detail__title {
             text-align: center;
         }
-        ul {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, 240px);
-            gap: 20px 30px;
-            justify-content: center;
+    }
 
-            li {
-                background: #ffffff;
-                border: 1px solid rgba(51, 51, 51, 0.2);
-                border-radius: 15px;
-                padding: 10px 10px 20px;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                > p {
-                    font-weight: 600;
-                    font-size: 21px;
-                    line-height: 25px;
-                    margin-top: 12px;
-                }
-            }
+    &__structure-list {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, 240px);
+        gap: 20px 30px;
+        justify-content: center;
 
-            img {
-                width: 100%;
-                object-fit: contain;
-                height: 200px;
-            }
-
-            div p {
-                font-size: 15px;
-                line-height: 18px;
-                color: rgba(51, 51, 51, 0.5);
-                margin-top: 5px;
-            }
-
-            h3 {
+        li {
+            background: #ffffff;
+            border: 1px solid rgba(51, 51, 51, 0.2);
+            border-radius: 15px;
+            padding: 10px 10px 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            > p {
                 font-weight: 600;
-                font-size: 17px;
-                line-height: 20px;
-                margin-top: 13px;
+                font-size: 21px;
+                line-height: 25px;
+                margin-top: 12px;
             }
+        }
 
-            li > p,
-            li > div > p,
-            li h3 {
-                margin-left: 10px;
-                margin-right: 4px;
-            }
+        img {
+            width: 100%;
+            object-fit: contain;
+            height: 200px;
+        }
+
+        div p {
+            font-size: 15px;
+            line-height: 18px;
+            color: rgba(51, 51, 51, 0.5);
+            margin-top: 5px;
+        }
+
+        h3 {
+            font-weight: 600;
+            font-size: 17px;
+            line-height: 20px;
+            margin-top: 13px;
+        }
+
+        li > p,
+        li > div > p,
+        li h3 {
+            margin-left: 10px;
+            margin-right: 4px;
         }
     }
 
@@ -338,12 +340,16 @@
     }
 
     @media (max-width: 767px) {
+        #structure.detail__section {
+            display: none;
+        }
+        margin-bottom: 50px;
         &__product {
             margin-top: 22px;
         }
 
         &__parameters {
-            margin-top: 45px; 
+            margin-top: 45px;
         }
         .content {
             font-size: 15px;
