--- a/src/scss/popups.scss
+++ b/src/scss/popups.scss
@@ -88,3 +88,12 @@
     padding-top: 20px;
   }
 }
+
+
+#order {
+  .popup__close {
+    top: 20px;
+    right: 10px;
+    color: rgba(51, 51, 51, 0.3)
+  }
+}
