--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -124,6 +124,12 @@ body {
 /* Поставщики */
 @import "suppliers";
 
+/* Корзина */
+@import 'cart';
+
+/* Заказ */
+@import 'order';
+
 /* Отзывы и благодарности */
 @import "reviews";
 
