--- a/src/scss/selects.scss
+++ b/src/scss/selects.scss
@@ -94,23 +94,28 @@
   }
 
   &__option {
-
     width: 100%;
     display: block;
 
-    a,
-    input {
-      display: block;
-      text-align: center;
-      width: 100%;
-      padding: 11px 17px 11px 0px;
-    }
     &:hover {
-      a,
-      input {
+      .select__link {
         color: $red;
         white-space: nowrap;
       }
+    }
+
+    input {
+      display: none;
+    }
+  }
+
+  &__link {
+    display: block;
+    text-align: center;
+    width: 100%;
+    padding: 11px 17px 11px 0px;
+    &:hover {
+      cursor: pointer;
     }
   }
 }
