--- a/src/scss/selects.scss
+++ b/src/scss/selects.scss
@@ -15,8 +15,8 @@
   &.open {
     overflow: initial;
     .select__list {
-      max-height: 1000px;
-      overflow: visible;
+      opacity: 1;
+      visibility: visible;
     }
 
     .select__btn {
@@ -80,11 +80,10 @@
     width: 100%;
     top: 100%;
     left: 0;
-
-    max-height: 0;
     display: flex;
-    overflow: hidden;
-    transition: max-height 0.25s ease-in-out;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.25s ease-in-out, visibility 0.25s ease-in-out;
     border-bottom-left-radius: 9px;
     border-bottom-right-radius: 9px;
     z-index: 999;
