--- a/src/scss/order.scss
+++ b/src/scss/order.scss
@@ -1,8 +1,4 @@
 .order {
-  /*  background-color: white;
-    padding: 60px;
-    border-radius: 15px;
- */
   .form__title {
     font-family: "Tenor Sans";
   }
@@ -133,6 +129,60 @@
       line-height: 25px;
     }
   }
+
+  @media (max-width: 767px) {
+    &__item {
+      grid-template-columns: 70px max-content 1fr max-content;
+      align-items: center;
+    }
+
+    &__photo {
+      width: 70px;
+      grid-column: 1/2;
+      grid-row: 1/3;
+      align-self: flex-start;
+    }
+
+    &__name {
+      grid-column: 2/5;
+    }
+
+    .counter {
+      width: 80px;
+    }
+
+    .form__title {
+      font-size: 30px;
+      line-height: 34px;
+      text-align: center;
+    }
+
+    .form__row {
+      max-height: 50px;
+    }
+
+    &__export {
+      font-size: 13px;
+      line-height: 20px;
+      padding: 12px;
+    }
+  }
+
+  @media(max-width: 480px) {
+    &__total {
+      flex-direction: column;
+      align-items: initial;
+      p {
+        margin-bottom: 8px;
+      }
+    }
+  }
+
+  @media(max-width: 374px) {
+    .counter {
+      width: 70px;
+    }
+  }
 }
 
 .order-swiper {
@@ -140,4 +190,17 @@
   background-color: white;
   padding: 40px 60px;
   max-height: 90vh;
+
+  .swiper-scrollbar {
+    width: 3px;
+  }
+
+  @media (max-width: 767px) {
+    width: 90vw;
+    padding: 40px calc(15px + (45 + 45 * 0.7) * ((100vw - 375px) / 767));
+  }
+
+  @media(max-width: 374px) {
+    width: 95vw;
+  }
 }
