--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -130,6 +130,12 @@ body {
 /* Заказ */
 @import 'order';
 
+/* Контакты */
+@import 'contacts';
+
+/* Персонал */
+@import 'personal';
+
 /* Отзывы и благодарности */
 @import "reviews";
 
