--- a/src/scss/other.scss
+++ b/src/scss/other.scss
@@ -183,6 +183,7 @@
     background-image: url(../img/form_faq.png);
     background-size: cover;
     background-repeat: no-repeat;
+    padding-bottom: 50px;
   }
 
   @media (max-width: 1024px) {
